YelpCamp/v2/readme.md
# YELPCAMP

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:
* Name
* Image
* Each campground will have an array,
[
	{name:"Cache Creek",image:http://www.image.com"}
]

# Layout and Basic Styling
* Create our header and footer partials
* Add in bootstrap

# Creating New Campgrounds
* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

# Add Mongoose
* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes!

# Show Page
* Review the RESTful routes we've seen so far
* Add description to your campground model
* Show db.collection.drop()
* Add a show route/template

# RESTful ROUTES #
*	https://codepen.io/emz123/pen/MqJzyP

# Refactor Mongoose Code
*	Create a models directory
*	Use module.exports
*	Require everything correctly!
